Changelog:
1. Interactions with covered blocks no longer risks throwing crash.

To Do:
1. Merge Tarig's code.
2. Convert dye colors to vanilla hex decimal colors.  Explore custom color support.
3. Investigate blank hammer messages.